// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mention-3.ts: inserted if space on single match 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "accessLevel": "",
            "id": "0",
            "text": "@Carolyn",
            "userType": null,
          },
          "type": "mention",
        },
        Object {
          "text": " text ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`mention-3.ts: should not insert on space if multiple exact nickname match 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "@gill some text ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`mention-3.ts: user can click ToolbarMentionPicker and see mention 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "accessLevel": "",
            "id": "0",
            "text": "@Carolyn",
            "userType": null,
          },
          "type": "mention",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`mention-3.ts: user should not see mention inside a code block 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "this is a code block @Caro
",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`mention-3.ts: user should not see mention inside inline code 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "this is inline code @Carolyn",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`mention-3.ts: users with same first name should not be selected if space 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "@alica some text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
